added the ability to add a product
